popovers: Fix popover arrow shifting to the left
In narrow windows, when the message actions popover was invoked,
the popover arrow seemed to be going left which was because
the topic length couldn't line-wrap.
For mobile view a screen popover replaces the arrow popover.

Fixes #4145.

--- a/static/styles/popovers.scss
+++ b/static/styles/popovers.scss
@@ -99,6 +99,16 @@ ul {
     }
 }
 
+@media (max-width: 1165px) {
+    .message_top_line {
+        margin-right: 14px;
+    }
+
+    .message_time {
+        margin-right: -14px;
+    }
+}
+
 .user_popover {
     width: 240px;
 
